Update all po files Thanks to @teamblue-e2

--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-06 14:27+0100\n"
-"PO-Revision-Date: 2024-01-06 14:34+0100\n"
+"POT-Creation-Date: 2024-01-12 11:21+0100\n"
+"PO-Revision-Date: 2024-01-12 11:22+0100\n"
 "Last-Translator: Teamblue teamblue@online.de <teamblue-e2@online.de>\n"
 "Language-Team: Teamblue teamblue@online.de\n"
 "Language: de\n"
@@ -5257,7 +5257,7 @@ msgid "Hardware Accelerated"
 msgstr "Hardwarebeschleunigt"
 
 msgid "Hardware: "
-msgstr "Hardware:"
+msgstr "Hardware: "
 
 msgid "HddMount"
 msgstr "HddMount"
@@ -5532,6 +5532,9 @@ msgstr "Image Erstellt: %s/%s-%s-%s-backup-%s_usb.zip"
 
 msgid "Image creation failed - "
 msgstr "Image Erstellung fehlgeschlagen - "
+
+msgid "Image revision: "
+msgstr "Image Revision: "
 
 #, python-format
 msgid ""
@@ -7297,7 +7300,7 @@ msgid "Number or SMS style data entry"
 msgstr "Zahlen- oder SMS-Eingabemethode"
 
 msgid "OE Version: "
-msgstr "OE-Version:"
+msgstr "OE-Version: "
 
 msgid "OK"
 msgstr "OK"
