--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-06 14:27+0100\n"
+"POT-Creation-Date: 2024-01-12 11:21+0100\n"
 "PO-Revision-Date: 2021-11-30 12:39+0100\n"
 "Last-Translator: teamblue-e2 <teamblue-e2@online.de>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -6267,6 +6267,10 @@ msgstr "Immagine creata su: %s/%s-%s-%s-backup-%s_usb.zip"
 
 msgid "Image creation failed - "
 msgstr "Creazione dell'immagine non riuscita -"
+
+#
+msgid "Image revision: "
+msgstr ""
 
 #, python-format
 msgid ""
