--- a/po/fy.po
+++ b/po/fy.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-06 14:27+0100\n"
+"POT-Creation-Date: 2024-01-12 11:21+0100\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -6621,6 +6621,10 @@ msgid "Image created on: %s/%s-%s-%s-backup-%s_usb.zip"
 msgstr ""
 
 msgid "Image creation failed - "
+msgstr ""
+
+#
+msgid "Image revision: "
 msgstr ""
 
 #, python-format
