--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-12 11:21+0100\n"
-"PO-Revision-Date: 2024-01-12 11:22+0100\n"
+"PO-Revision-Date: 2024-01-15 09:57+0100\n"
 "Last-Translator: Teamblue teamblue@online.de <teamblue-e2@online.de>\n"
 "Language-Team: Teamblue teamblue@online.de\n"
 "Language: de\n"
@@ -1044,7 +1044,7 @@ msgid "All satellites 4 (USALS)"
 msgstr "Alle Satelliten 4 (USALS)"
 
 msgid "All services provider"
-msgstr "Alle Dienste Anbieter"
+msgstr "Alle Dienstanbieter"
 
 msgid "All slots"
 msgstr "Alle Steckplätze"
@@ -9907,7 +9907,7 @@ msgid "Service name"
 msgstr "Kanalname"
 
 msgid "Service name font size"
-msgstr "Schriftgröße des Dienstnamens"
+msgstr "Schriftgröße des Kanalnamen"
 
 msgid ""
 "Service not found!\n"
@@ -9917,7 +9917,7 @@ msgstr ""
 "(SID nicht in PAT gefunden)"
 
 msgid "Service number font size"
-msgstr "Schriftgröße der Dienstnummer"
+msgstr "Schriftgröße der Kanalnummer"
 
 msgid "Service reference"
 msgstr "Kanal Referenz"
